# emphasoft-trial

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_superuser.py
emphasoft/: settings.py  urls.py
