[tool.poetry]
name = "emphasoft-trial"
version = "0.1.0"
description = ""
authors = ["Eduard Gan <eduard.gan@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.5"
psycopg2-binary = "=2.8.6"
Django = "=3.2.1"
djangorestframework = "=3.12.4"
drf-yasg = "=1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
